--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Box model</title>
-  </head>
-  <!-- Завдання:
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Box model</title>
+  <link rel="stylesheet" href="/reset.css">
+  <link rel="stylesheet" href="/style.css">
+</head>
+<!-- Завдання:
   1.Створіть та підключіть файл reset.css в якому додайте скидання стилів наступним кодом :
   * {
     margin: 0;
@@ -14,16 +17,18 @@
     box-sizing: border-box;
   }
    -->
-  <!-- 2. Підключіть вже створений style.css 
+<!-- 2. Підключіть вже створений style.css 
     та перейдіть до виконання завдань в ньому(зверніть увагу на порядок підключення файлів) -->
-  <body>
-    <div class="box_container">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
-      <div class="box">5</div>
-      <div class="box">6</div>
-    </div>
-  </body>
+
+<body>
+  <div class="box_container">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+    <div class="box">6</div>
+  </div>
+</body>
+
 </html>
